--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+// Ignore all the java bytecode
+*.class
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij
